--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "dotenv": "^10.0.0",
     "firebase": "^8.7.1",
+    "firebase-admin": "^9.11.0",
     "npm": "^7.19.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
