--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "firebase-admin": "^9.11.0",
     "npm": "^7.19.1",
     "react": "^17.0.2",
+    "react-custom-roulette": "^1.1.8",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.2.5",
     "react-modal": "^3.14.3",
+    "react-roulette-game": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.11",
     "web-vitals": "^1.0.1"
