--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-components": "^5.3.1",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.11",
+    "web-animations-js": "^2.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
