package.json 수정

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^10.0.0",
     "firebase": "^8.7.1",
     "firebase-admin": "^9.11.0",
+    "node-sass": "^6.0.1",
     "npm": "^7.19.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
