--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "firebase-admin": "^9.11.0",
     "npm": "^7.19.1",
     "react": "^17.0.2",
+    "react-custom-roulette": "^1.1.8",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.39.0",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.11",
     "web-vitals": "^1.0.1"
